{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 58,
  "lineage": "cf968e97-a0d2-09f4-bcd6-999d5cb0de22",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:security-group/sg-09aad7eae2a0b5543",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09aad7eae2a0b5543",
            "ingress": [],
            "name": "all_worker_management20240731102911990100000004",
            "name_prefix": "all_worker_management",
            "owner_id": "767397836272",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-1429938590",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09aad7eae2a0b5543",
            "security_group_rule_id": "sgr-0d9e2a820ff2d2ceb",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-3394830802",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-09aad7eae2a0b5543",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:security-group/sg-0e34f13295186582d",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0e34f13295186582d",
            "ingress": [],
            "name": "dee-eks-Oac6qBwE-cluster-20240731102913912300000008",
            "name_prefix": "dee-eks-Oac6qBwE-cluster-",
            "owner_id": "767397836272",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dee-eks-Oac6qBwE-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "dee-eks-Oac6qBwE-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:security-group/sg-072d52929de0a6201",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-072d52929de0a6201",
            "ingress": [],
            "name": "dee-eks-Oac6qBwE-node-20240731102913905000000007",
            "name_prefix": "dee-eks-Oac6qBwE-node-",
            "owner_id": "767397836272",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dee-eks-Oac6qBwE-node",
              "cluster": "demo",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "owned"
            },
            "tags_all": {
              "Name": "dee-eks-Oac6qBwE-node",
              "cluster": "demo",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-399976626",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e34f13295186582d",
            "security_group_rule_id": "sgr-0c94b3407ddf4cbb3",
            "self": false,
            "source_security_group_id": "sg-072d52929de0a6201",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2694605620",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-030e234da263a476e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3464370485",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0cd482cab082a5e61",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-526759746",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-096ed817786d4927d",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3592933588",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-018d8ad9e4a155706",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3313233141",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0b83898ea610ff196",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2715475774",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0ea31f352f406d822",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4111716361",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0309074efa12886cc",
            "self": false,
            "source_security_group_id": "sg-0e34f13295186582d",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2680800640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0f5c277200c4133e0",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3544165675",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0f0d77ba88242f017",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2002783940",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-072d52929de0a6201",
            "security_group_rule_id": "sgr-0626feb9b7ad03f6d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:network-acl/acl-0947559a6cdd6ee39",
            "default_network_acl_id": "acl-0947559a6cdd6ee39",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0947559a6cdd6ee39",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397836272",
            "subnet_ids": [
              "subnet-032988fec80ae4b48",
              "subnet-082729499844c30dc",
              "subnet-0884979174193abb2",
              "subnet-0a98956748cbae5f7"
            ],
            "tags": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:route-table/rtb-02abc739db1f2c42d",
            "default_route_table_id": "rtb-02abc739db1f2c42d",
            "id": "rtb-02abc739db1f2c42d",
            "owner_id": "767397836272",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:security-group/sg-013afc00e4a9125d7",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-013afc00e4a9125d7",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "767397836272",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-default",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01851f174b4af50e6",
            "arn": "arn:aws:ec2:us-east-1:767397836272:elastic-ip/eipalloc-01851f174b4af50e6",
            "domain": "vpc",
            "id": "eipalloc-01851f174b4af50e6",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-72-100-134.compute-1.amazonaws.com",
            "public_ip": "52.72.100.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "dee-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:internet-gateway/igw-02fc8693c43363f0d",
            "id": "igw-02fc8693c43363f0d",
            "owner_id": "767397836272",
            "tags": {
              "Name": "dee-eks-vpc",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01851f174b4af50e6",
            "association_id": "eipassoc-0acf4deaf783e119b",
            "connectivity_type": "public",
            "id": "nat-0c1ef1be7d31e8054",
            "network_interface_id": "eni-03ddb0111cb3dfbd6",
            "private_ip": "10.0.4.146",
            "public_ip": "52.72.100.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-082729499844c30dc",
            "tags": {
              "Name": "dee-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01c67d434db4fa4861080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c1ef1be7d31e8054",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01c67d434db4fa486",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-02fc8693c43363f0d",
            "id": "r-rtb-01dc9fbef9d22c8581080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01dc9fbef9d22c858",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:route-table/rtb-01c67d434db4fa486",
            "id": "rtb-01c67d434db4fa486",
            "owner_id": "767397836272",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dee-eks-vpc-private",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-private",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:route-table/rtb-01dc9fbef9d22c858",
            "id": "rtb-01dc9fbef9d22c858",
            "owner_id": "767397836272",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "dee-eks-vpc-public",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-public",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-046387cad967f6a19",
            "route_table_id": "rtb-01c67d434db4fa486",
            "subnet_id": "subnet-0884979174193abb2"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e965b86476adbb79",
            "route_table_id": "rtb-01c67d434db4fa486",
            "subnet_id": "subnet-0a98956748cbae5f7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094953532cbd57638",
            "route_table_id": "rtb-01dc9fbef9d22c858",
            "subnet_id": "subnet-082729499844c30dc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-059f5730bd896507d",
            "route_table_id": "rtb-01dc9fbef9d22c858",
            "subnet_id": "subnet-032988fec80ae4b48"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:subnet/subnet-0884979174193abb2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0884979174193abb2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397836272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dee-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-private-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:subnet/subnet-0a98956748cbae5f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a98956748cbae5f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397836272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dee-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-private-us-east-1b",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:subnet/subnet-082729499844c30dc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082729499844c30dc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397836272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dee-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-public-us-east-1a",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:subnet/subnet-032988fec80ae4b48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032988fec80ae4b48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397836272",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dee-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "dee-eks-vpc-public-us-east-1b",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0d6dc5d2c7b083930"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:767397836272:vpc/vpc-0d6dc5d2c7b083930",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0947559a6cdd6ee39",
            "default_route_table_id": "rtb-02abc739db1f2c42d",
            "default_security_group_id": "sg-013afc00e4a9125d7",
            "dhcp_options_id": "dopt-00497ca213f413220",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0d6dc5d2c7b083930",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02abc739db1f2c42d",
            "owner_id": "767397836272",
            "tags": {
              "Name": "dee-eks-vpc",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            },
            "tags_all": {
              "Name": "dee-eks-vpc",
              "kubernetes.io/cluster/dee-eks-Oac6qBwE": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}